Added new card options

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -240,19 +240,23 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <div class="align-items-center d-flex flex-column">
+                                <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
+                            </div>
                             <h3>Delight your workers</h3>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
                                 <li>Sub Feature 1&nbsp;</li>                                 
-
                                 <li>Sub Feature 2</li>                                 
-
-                                <li>Sub Feature 3</li>                                                                  
+                                <li>Sub Feature 3</li>                                 
                             </ul>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <div class="align-items-center d-flex flex-column">
+                                <img alt="image of person examing design" width="200" height="200" src="images/uploads/cards-sample-5.svg">
+                            </div>
                             <h3>Your brand not ours</h3>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
@@ -260,20 +264,21 @@
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <div class="align-items-center d-flex flex-column">
+                                <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
+                            </div>
                             <h3>Save time with automation</h3>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
                                 <li>Sub Feature 1</li>                                 
-
                                 <li>Sub Feature 2</li>                                 
-
-                                <li>Sub Feature 3</li>                                                                  
+                                <li>Sub Feature 3</li>                                 
                             </ul>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -307,25 +312,31 @@
             <div class="container pt-3">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
-                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><div class="align-items-center d-flex flex-column">
+                                <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
+                            </div><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1&nbsp;</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
-                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a> 
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
-                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"> <h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"> <div class="align-items-center d-flex flex-column">
+                                <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-5.svg">
+                            </div><h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
-                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a> 
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
-                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><div class="align-items-center d-flex flex-column">
+                                <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
+                            </div><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
-                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a> 
                     </div>
                 </div>
             </div>
@@ -340,6 +351,69 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-6</p>
+            </div>
+        </section>
+        <section class="pd-cards-6">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class="pd-cards-6-headline">
+                            <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
+                        </div>
+                        <div class="pd-cards-6-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container pt-3">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-6-card-outer"><div class="align-items-center d-flex flex-column">
+                                <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
+                            </div><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                                <li>Sub Feature 1&nbsp;</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-6-readMore">Read more</p></a> 
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-6-card-outer"> <div class="align-items-center d-flex flex-column">
+                                <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-5.svg">
+                            </div><h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-6-readMore">Read more</p></a> 
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-6-card-outer"><div class="align-items-center d-flex flex-column">
+                                <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
+                            </div><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-6-readMore">Read more</p></a> 
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-6-link">Explore more features... <span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-7</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-8</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
