Finished cards and started sections

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -41,7 +41,9 @@
                                     <img src="/images/uploads/cards-sample-1.jpg" alt="image for the card" width="200" height="180" loading="lazy">
                                 </picture>
                             </div><div class="flex-grow-1 pd-cards-1-body">
-                                <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                                <header>
+                                    <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div><footer class="pd-cards-1-footer">
                                 <p>Read more</p>
@@ -54,7 +56,9 @@
                                     <img src="/images/uploads/cards-sample-2.jpg" alt="image for the card" width="200" height="180" loading="lazy">
                                 </picture>
                             </div><div class="flex-grow-1 pd-cards-1-body">
-                                <h3>Pellentesque vitae ligula ex.</h3>
+                                <header>
+                                    <h3>Pellentesque vitae ligula ex.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div><footer class="pd-cards-1-footer">
                                 <p>Read more</p>
@@ -67,7 +71,9 @@
                                     <img src="/images/uploads/cards-sample-3.jpg" alt="image for the card" width="200" height="180" loading="lazy">
                                 </picture>
                             </div><div class="flex-grow-1 pd-cards-1-body">
-                                <h3>Vestibulum blandit eu&nbsp; mattis. Suspendisse non pulvinar tellus.</h3>
+                                <header>
+                                    <h3>Vestibulum blandit eu&nbsp; mattis. Suspendisse non pulvinar tellus.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div><footer class="pd-cards-1-footer">
                                 <p>Read more</p>
@@ -113,7 +119,9 @@
                                 </picture>
                             </div>
                             <div class="flex-grow-1 pd-cards-2-body">
-                                <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                                <header>
+                                    <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div>
                         </div>                         
@@ -127,7 +135,9 @@
                                 </picture>
                             </div>
                             <div class="flex-grow-1 pd-cards-2-body">
-                                <h3>Pellentesque vitae ligula ex.</h3>
+                                <header>
+                                    <h3>Pellentesque vitae ligula ex.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div>
                         </div>                         
@@ -141,7 +151,9 @@
                                 </picture>
                             </div>
                             <div class="flex-grow-1 pd-cards-2-body">
-                                <h3>Vestibulum blandit eu  mattis. Suspendisse non pulvinar tellus.</h3>
+                                <header>
+                                    <h3>Vestibulum blandit eu  mattis. Suspendisse non pulvinar tellus.</h3>
+                                </header>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div>
                         </div>                         
@@ -177,7 +189,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <article class="col-md-4">
                         <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
@@ -186,8 +198,8 @@
                             </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
                                 <h3>Nullam commodo erat id urna tempor ornare.</h3>
                             </header></a> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
@@ -196,8 +208,8 @@
                             </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
                                 <h3>Pellentesque vitae ligula ex.</h3>
                             </header></a> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
                                 <picture>
                                     <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
@@ -206,7 +218,7 @@
                             </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
                                 <h3>Vestibulum blandit eu mattis. Suspendisse non pulvinar tellus.</h3>
                             </header></a> 
-                    </div>
+                    </article>
                 </div>
             </div>
             <div class="container pb-3 pt-5">
@@ -238,12 +250,14 @@
             </div>
             <div class="container pt-3">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
                             <div class="align-items-center d-flex flex-column">
                                 <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
                             </div>
-                            <h3>Delight your workers</h3>
+                            <header>
+                                <h3>Delight your workers</h3>
+                            </header>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
                                 <li>Sub Feature 1&nbsp;</li>                                 
@@ -251,13 +265,15 @@
                                 <li>Sub Feature 3</li>                                 
                             </ul>
                         </div>                         
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
                             <div class="align-items-center d-flex flex-column">
                                 <img alt="image of person examing design" width="200" height="200" src="images/uploads/cards-sample-5.svg">
                             </div>
-                            <h3>Your brand not ours</h3>
+                            <header>
+                                <h3>Your brand not ours</h3>
+                            </header>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
                                 <li>Sub Feature 1</li>                                 
@@ -265,13 +281,15 @@
                                 <li>Sub Feature 3</li>                                 
                             </ul>
                         </div>                         
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <div class="flex-grow-1 pd-cards-4-card-outer">
                             <div class="align-items-center d-flex flex-column">
                                 <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
                             </div>
-                            <h3>Save time with automation</h3>
+                            <header>
+                                <h3>Save time with automation</h3>
+                            </header>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             <ul> 
                                 <li>Sub Feature 1</li>                                 
@@ -279,7 +297,7 @@
                                 <li>Sub Feature 3</li>                                 
                             </ul>
                         </div>                         
-                    </div>
+                    </article>
                 </div>
             </div>
             <div class="container pb-3 pt-5">
@@ -311,33 +329,39 @@
             </div>
             <div class="container pt-3">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><div class="align-items-center d-flex flex-column">
                                 <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
-                            </div><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                            </div><header>
+                                <h3>Delight your workers</h3>
+                            </header><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1&nbsp;</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-5-readMore">Read more</p></a> 
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-5-card-outer"> <div class="align-items-center d-flex flex-column">
                                 <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-5.svg">
-                            </div><h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
+                            </div><header>
+                                <h3>Your brand not ours</h3>
+                            </header> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-5-readMore">Read more</p></a> 
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><div class="align-items-center d-flex flex-column">
                                 <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
-                            </div><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                            </div><header>
+                                <h3>Save time with automation</h3>
+                            </header><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-5-readMore">Read more</p></a> 
-                    </div>
+                    </article>
                 </div>
             </div>
             <div class="container pb-3 pt-5">
@@ -369,33 +393,39 @@
             </div>
             <div class="container pt-3">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-6-card-outer"><div class="align-items-center d-flex flex-column">
                                 <img src="images/uploads/cards-sample-4.svg" alt="image of people celebrating" width="200" height="200">
-                            </div><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                            </div><header>
+                                <h3>Delight your workers</h3>
+                            </header><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1&nbsp;</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-6-readMore">Read more</p></a> 
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-6-card-outer"> <div class="align-items-center d-flex flex-column">
                                 <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-5.svg">
-                            </div><h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
+                            </div><header>
+                                <h3>Your brand not ours</h3>
+                            </header> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-6-readMore">Read more</p></a> 
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                    </article>
+                    <article class="col-lg-4 col-md-6 d-flex flex-column pb-3">
                         <a href="#" class="flex-grow-1 pd-cards-6-card-outer"><div class="align-items-center d-flex flex-column">
                                 <img alt="image of people celebrating" width="200" height="200" src="images/uploads/cards-sample-6.svg">
-                            </div><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                            </div><header>
+                                <h3>Save time with automation</h3>
+                            </header><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
                                 <li>Sub Feature 1</li>                                 
                                 <li>Sub Feature 2</li>                                 
                                 <li>Sub Feature 3</li>                                 
                             </ul><p class="pd-cards-6-readMore">Read more</p></a> 
-                    </div>
+                    </article>
                 </div>
             </div>
             <div class="container pb-3 pt-5">
